# psnailder

./: README.md  pyproject.toml
src/psnailder/: __init__.py  _shape_utils.py  background_utils.py  component.py  fit.py  likelihood_utils.py  model.py
tests/: test_fit.py  test_jacobian.py
