[project]
name = "psnailder"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pavadol Yamsiri", email = "pavyamsiri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "emcee>=3.1.6",
    "numpy>=2.4.3",
    "optype[numpy]>=0.17.0",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.3",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportDeprecated = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnknownArgumentType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 130

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
